styles/temples.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

body {
    font-family: 'Noto Sans', sans-serif;
    background-color: #e0c3c3;
}

header {
    display: grid;
    grid-gap: 1rem;
    text-align: center;
    background-color: #e7a6a6;
    padding: 20px;
    border: 1px solid rgba(0, 0, 0, 0.1);
    box-shadow: 0 0 30px #333;
}

#title {
    font-family: 'Advent Pro', sans-serif;
    font-size: 3rem;
    text-align: center;
    color: #000;
}

header, main {
    margin: 0 auto;
}

h1 {
    font-family: 'Advent Pro', sans-serif;
    text-align: center;
    font-size: 2rem;
    color: #333;
    padding: 10px;
}

.hamburger {
    position: absolute;
    top: 1rem;
    right: 1rem;
    font-size: 24px;
    background: none;
    border: none;
    cursor: pointer;
    transition: transform 0.3s ease;
    padding: 10px;
}

nav {
    
    background-color: #032251;    
}

.nav-menu{
    max-height: 0;
    overflow: hidden;
    transition: max-height 0.3s ease-out;
    list-style-type: none;
    display: flex;
    flex-direction: column;
    gap: 1rem;
    padding: 0;
}
.nav-menu.active {
    max-height: 500px; 
    transition: max-height 0.5s ease-in;
}

.nav-menu li {
    padding: 10px;
    border-bottom: 10px solid #ddd;
}
.nav-menu li a {
    display: block;
    text-decoration: none;
    text-align: center;
    font-weight: bold;
    color: #000;
    padding: 1rem;
    font-size: large;    
}

nav a:hover {
    background-color: #b06a6a;
    color: #000;
}

.hover:hover {
	box-shadow: 0 0 50px #333;
}

main {
    max-width: 768px;
    margin: 0 auto;
}

.gallery {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
    gap: 1rem;
    max-width: 1200px;
    margin: 0 auto;
    padding: 1rem;
}

.gallery figure {
    margin: 0;
    text-align: center;
}

.gallery img {
    width: 100%;
    height: auto;
    display: block;
    border-radius: 8px;
}

figcaption {
    text-align: center;
    font-size: 1.2rem;
    font-weight: bold;
    color: #333;
}

footer {
    text-align: center;
    padding: 1rem;
    background-color: #e7a6a6;
    border-top: 1px solid rgba(0, 0, 0, 0.1);
    box-shadow: 0 -5px 30px #333;
}

